// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test suites for Add events component +++ changes  username input field 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="Adds"
  >
    <nav
      className=""
      role="navigation"
      style={
        Object {
          "backgroundColor": "#212F3C",
        }
      }
    >
      <div
        className="nav-wrapper container"
      >
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/"
        >
          <a
            className="brand-logo white-text"
            id="logo-container "
          >
            Andela
          </a>
        </Link>
        <ul
          className="right hide-on-med-and-down"
        >
          <li>
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/user/events"
            >
              My Events
            </Link>
          </li>
        </ul>
        <ul
          className="side-nav"
          id="nav-mobile"
        >
          <li>
            <a
              href="#"
            />
          </li>
        </ul>
        <a
          className="button-collapse"
          data-activates="nav-mobile"
          href=""
        >
          <i
            className="material-icons"
          >
            menu
          </i>
        </a>
      </div>
    </nav>
    <div
      className="bgimg7"
      id=""
      style={Object {}}
    >
      <div
        className="row"
      >
        <div
          className="col s12 m12 l6 offset-l3"
        >
          <div
            className=""
            id="container"
            style={
              Object {
                "paddingTop": 25,
              }
            }
          >
            <div
              className="row"
            >
              <div
                className="card col s12"
              >
                <div
                  className="card-content white lighten-4"
                  style={
                    Object {
                      "color": "#212F3C",
                    }
                  }
                >
                  <div
                    id="test4"
                    style={
                      Object {
                        "border": "2 solid lightgrey",
                      }
                    }
                  >
                    <div
                      className="row"
                    >
                      <Form
                        activeRoute={[Function]}
                        centerSet={1}
                        centers={
                          Array [
                            Object {
                              "description": "awesome place",
                              "name": "emporium",
                              "price": 400,
                            },
                            Object {
                              "description": "awesome place",
                              "name": "emporium",
                              "price": 400,
                            },
                          ]
                        }
                        closeErrMsg={[Function]}
                        error={undefined}
                        handleChange={[Function]}
                        handleSubmit={[Function]}
                        loader={undefined}
                        state={
                          Object {
                            "Center": "testing",
                            "center": "",
                            "centerSet": 1,
                            "date": 0,
                            "guests": 0,
                            "selectedCenter": Array [],
                            "time": "12:00",
                            "title": "",
                            "type": "",
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "nodes": Array [
    <div
      className="Adds"
    >
      <nav
        className=""
        role="navigation"
        style={
          Object {
            "backgroundColor": "#212F3C",
          }
        }
      >
        <div
          className="nav-wrapper container"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/"
          >
            <a
              className="brand-logo white-text"
              id="logo-container "
            >
              Andela
            </a>
          </Link>
          <ul
            className="right hide-on-med-and-down"
          >
            <li>
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/user/events"
              >
                My Events
              </Link>
            </li>
          </ul>
          <ul
            className="side-nav"
            id="nav-mobile"
          >
            <li>
              <a
                href="#"
              />
            </li>
          </ul>
          <a
            className="button-collapse"
            data-activates="nav-mobile"
            href=""
          >
            <i
              className="material-icons"
            >
              menu
            </i>
          </a>
        </div>
      </nav>
      <div
        className="bgimg7"
        id=""
        style={Object {}}
      >
        <div
          className="row"
        >
          <div
            className="col s12 m12 l6 offset-l3"
          >
            <div
              className=""
              id="container"
              style={
                Object {
                  "paddingTop": 25,
                }
              }
            >
              <div
                className="row"
              >
                <div
                  className="card col s12"
                >
                  <div
                    className="card-content white lighten-4"
                    style={
                      Object {
                        "color": "#212F3C",
                      }
                    }
                  >
                    <div
                      id="test4"
                      style={
                        Object {
                          "border": "2 solid lightgrey",
                        }
                      }
                    >
                      <div
                        className="row"
                      >
                        <Form
                          activeRoute={[Function]}
                          centerSet={1}
                          centers={
                            Array [
                              Object {
                                "description": "awesome place",
                                "name": "emporium",
                                "price": 400,
                              },
                              Object {
                                "description": "awesome place",
                                "name": "emporium",
                                "price": 400,
                              },
                            ]
                          }
                          closeErrMsg={[Function]}
                          error={undefined}
                          handleChange={[Function]}
                          handleSubmit={[Function]}
                          loader={undefined}
                          state={
                            Object {
                              "Center": "testing",
                              "center": "",
                              "centerSet": 1,
                              "date": 0,
                              "guests": 0,
                              "selectedCenter": Array [],
                              "time": "12:00",
                              "title": "",
                              "type": "",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>,
  ],
  "options": Object {
    "attachTo": <body>
      
    
      <form
        id="add-form"
      >
        
      
        <input
          class=""
          id="sel"
          value="yo"
        />
        
    
      </form>
      
    
      <form
        id="add-form2"
      >
        
      
        <input
          class=""
          id="sel"
          value="yo"
        />
        
    
      </form>
      
    
      <div
        id="1"
      >
        hello
      </div>
      
    
      <div
        id="2"
      >
        hullo
      </div>
      
  


    </body>,
  },
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_context": Object {},
      "_currentElement": <Events
        centers={
          Array [
            Object {
              "description": "awesome place",
              "name": "emporium",
              "price": 400,
            },
            Object {
              "description": "awesome place",
              "name": "emporium",
              "price": 400,
            },
          ]
        }
        getCenters={[Function]}
        location={
          Object {
            "pathname": "hello",
          }
        }
        params={
          Object {
            "id": 1,
          }
        }
      />,
      "_instance": Events {
        "_reactInternalInstance": [Circular],
        "activeRoute": [Function],
        "closeErrMsg": [Function],
        "context": Object {},
        "handleChange": [Function],
        "handleSubmit": [Function],
        "props": Object {
          "centers": Array [
            Object {
              "description": "awesome place",
              "name": "emporium",
              "price": 400,
            },
            Object {
              "description": "awesome place",
              "name": "emporium",
              "price": 400,
            },
          ],
          "getCenters": [Function],
          "location": Object {
            "pathname": "hello",
          },
          "params": Object {
            "id": 1,
          },
        },
        "refs": Object {},
        "state": Object {
          "Center": "testing",
          "center": "",
          "centerSet": 1,
          "date": 0,
          "guests": 0,
          "selectedCenter": Array [],
          "time": "12:00",
          "title": "",
          "type": "",
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_nativeContainerInfo": null,
      "_nativeParent": null,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": Object {
        "_currentElement": <div
          className="Adds"
        >
          <nav
            className=""
            role="navigation"
            style={
              Object {
                "backgroundColor": "#212F3C",
              }
            }
          >
            <div
              className="nav-wrapper container"
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/"
              >
                <a
                  className="brand-logo white-text"
                  id="logo-container "
                >
                  Andela
                </a>
              </Link>
              <ul
                className="right hide-on-med-and-down"
              >
                <li>
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/user/events"
                  >
                    My Events
                  </Link>
                </li>
              </ul>
              <ul
                className="side-nav"
                id="nav-mobile"
              >
                <li>
                  <a
                    href="#"
                  />
                </li>
              </ul>
              <a
                className="button-collapse"
                data-activates="nav-mobile"
                href=""
              >
                <i
                  className="material-icons"
                >
                  menu
                </i>
              </a>
            </div>
          </nav>
          <div
            className="bgimg7"
            id=""
            style={Object {}}
          >
            <div
              className="row"
            >
              <div
                className="col s12 m12 l6 offset-l3"
              >
                <div
                  className=""
                  id="container"
                  style={
                    Object {
                      "paddingTop": 25,
                    }
                  }
                >
                  <div
                    className="row"
                  >
                    <div
                      className="card col s12"
                    >
                      <div
                        className="card-content white lighten-4"
                        style={
                          Object {
                            "color": "#212F3C",
                          }
                        }
                      >
                        <div
                          id="test4"
                          style={
                            Object {
                              "border": "2 solid lightgrey",
                            }
                          }
                        >
                          <div
                            className="row"
                          >
                            <Form
                              activeRoute={[Function]}
                              centerSet={1}
                              centers={
                                Array [
                                  Object {
                                    "description": "awesome place",
                                    "name": "emporium",
                                    "price": 400,
                                  },
                                  Object {
                                    "description": "awesome place",
                                    "name": "emporium",
                                    "price": 400,
                                  },
                                ]
                              }
                              closeErrMsg={[Function]}
                              error={undefined}
                              handleChange={[Function]}
                              handleSubmit={[Function]}
                              loader={undefined}
                              state={
                                Object {
                                  "Center": "testing",
                                  "center": "",
                                  "centerSet": 1,
                                  "date": 0,
                                  "guests": 0,
                                  "selectedCenter": Array [],
                                  "time": "12:00",
                                  "title": "",
                                  "type": "",
                                }
                              }
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>,
        "_renderedOutput": <div
          className="Adds"
        >
          <nav
            className=""
            role="navigation"
            style={
              Object {
                "backgroundColor": "#212F3C",
              }
            }
          >
            <div
              className="nav-wrapper container"
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/"
              >
                <a
                  className="brand-logo white-text"
                  id="logo-container "
                >
                  Andela
                </a>
              </Link>
              <ul
                className="right hide-on-med-and-down"
              >
                <li>
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/user/events"
                  >
                    My Events
                  </Link>
                </li>
              </ul>
              <ul
                className="side-nav"
                id="nav-mobile"
              >
                <li>
                  <a
                    href="#"
                  />
                </li>
              </ul>
              <a
                className="button-collapse"
                data-activates="nav-mobile"
                href=""
              >
                <i
                  className="material-icons"
                >
                  menu
                </i>
              </a>
            </div>
          </nav>
          <div
            className="bgimg7"
            id=""
            style={Object {}}
          >
            <div
              className="row"
            >
              <div
                className="col s12 m12 l6 offset-l3"
              >
                <div
                  className=""
                  id="container"
                  style={
                    Object {
                      "paddingTop": 25,
                    }
                  }
                >
                  <div
                    className="row"
                  >
                    <div
                      className="card col s12"
                    >
                      <div
                        className="card-content white lighten-4"
                        style={
                          Object {
                            "color": "#212F3C",
                          }
                        }
                      >
                        <div
                          id="test4"
                          style={
                            Object {
                              "border": "2 solid lightgrey",
                            }
                          }
                        >
                          <div
                            className="row"
                          >
                            <Form
                              activeRoute={[Function]}
                              centerSet={1}
                              centers={
                                Array [
                                  Object {
                                    "description": "awesome place",
                                    "name": "emporium",
                                    "price": 400,
                                  },
                                  Object {
                                    "description": "awesome place",
                                    "name": "emporium",
                                    "price": 400,
                                  },
                                ]
                              }
                              closeErrMsg={[Function]}
                              error={undefined}
                              handleChange={[Function]}
                              handleSubmit={[Function]}
                              loader={undefined}
                              state={
                                Object {
                                  "Center": "testing",
                                  "center": "",
                                  "centerSet": 1,
                                  "date": 0,
                                  "guests": 0,
                                  "selectedCenter": Array [],
                                  "time": "12:00",
                                  "title": "",
                                  "type": "",
                                }
                              }
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": null,
      "_topLevelWrapper": null,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Events
    centers={
      Array [
        Object {
          "description": "awesome place",
          "name": "emporium",
          "price": 400,
        },
        Object {
          "description": "awesome place",
          "name": "emporium",
          "price": 400,
        },
      ]
    }
    getCenters={[Function]}
    location={
      Object {
        "pathname": "hello",
      }
    }
    params={
      Object {
        "id": 1,
      }
    }
  />,
}
`;

exports[`Test suites for Add events component +++ renders without crashing 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="Adds"
  >
    <nav
      className=""
      role="navigation"
      style={
        Object {
          "backgroundColor": "#212F3C",
        }
      }
    >
      <div
        className="nav-wrapper container"
      >
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/"
        >
          <a
            className="brand-logo white-text"
            id="logo-container "
          >
            Andela
          </a>
        </Link>
        <ul
          className="right hide-on-med-and-down"
        >
          <li>
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/user/events"
            >
              My Events
            </Link>
          </li>
        </ul>
        <ul
          className="side-nav"
          id="nav-mobile"
        >
          <li>
            <a
              href="#"
            />
          </li>
        </ul>
        <a
          className="button-collapse"
          data-activates="nav-mobile"
          href=""
        >
          <i
            className="material-icons"
          >
            menu
          </i>
        </a>
      </div>
    </nav>
    <div
      className="bgimg7"
      id=""
      style={Object {}}
    >
      <div
        className="row"
      >
        <div
          className="col s12 m12 l6 offset-l3"
        >
          <div
            className=""
            id="container"
            style={
              Object {
                "paddingTop": 25,
              }
            }
          >
            <div
              className="row"
            >
              <div
                className="card col s12"
              >
                <div
                  className="card-content white lighten-4"
                  style={
                    Object {
                      "color": "#212F3C",
                    }
                  }
                >
                  <div
                    id="test4"
                    style={
                      Object {
                        "border": "2 solid lightgrey",
                      }
                    }
                  >
                    <div
                      className="row"
                    >
                      <Form
                        activeRoute={[Function]}
                        centerSet={1}
                        centers={
                          Array [
                            Object {
                              "description": "awesome place",
                              "name": "emporium",
                              "price": 400,
                            },
                            Object {
                              "description": "awesome place",
                              "name": "emporium",
                              "price": 400,
                            },
                          ]
                        }
                        closeErrMsg={[Function]}
                        error={undefined}
                        handleChange={[Function]}
                        handleSubmit={[Function]}
                        loader={undefined}
                        state={
                          Object {
                            "Center": "testing",
                            "center": "",
                            "centerSet": 1,
                            "date": 0,
                            "guests": 0,
                            "selectedCenter": Array [],
                            "time": "12:00",
                            "title": "",
                            "type": "",
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "nodes": Array [
    <div
      className="Adds"
    >
      <nav
        className=""
        role="navigation"
        style={
          Object {
            "backgroundColor": "#212F3C",
          }
        }
      >
        <div
          className="nav-wrapper container"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/"
          >
            <a
              className="brand-logo white-text"
              id="logo-container "
            >
              Andela
            </a>
          </Link>
          <ul
            className="right hide-on-med-and-down"
          >
            <li>
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/user/events"
              >
                My Events
              </Link>
            </li>
          </ul>
          <ul
            className="side-nav"
            id="nav-mobile"
          >
            <li>
              <a
                href="#"
              />
            </li>
          </ul>
          <a
            className="button-collapse"
            data-activates="nav-mobile"
            href=""
          >
            <i
              className="material-icons"
            >
              menu
            </i>
          </a>
        </div>
      </nav>
      <div
        className="bgimg7"
        id=""
        style={Object {}}
      >
        <div
          className="row"
        >
          <div
            className="col s12 m12 l6 offset-l3"
          >
            <div
              className=""
              id="container"
              style={
                Object {
                  "paddingTop": 25,
                }
              }
            >
              <div
                className="row"
              >
                <div
                  className="card col s12"
                >
                  <div
                    className="card-content white lighten-4"
                    style={
                      Object {
                        "color": "#212F3C",
                      }
                    }
                  >
                    <div
                      id="test4"
                      style={
                        Object {
                          "border": "2 solid lightgrey",
                        }
                      }
                    >
                      <div
                        className="row"
                      >
                        <Form
                          activeRoute={[Function]}
                          centerSet={1}
                          centers={
                            Array [
                              Object {
                                "description": "awesome place",
                                "name": "emporium",
                                "price": 400,
                              },
                              Object {
                                "description": "awesome place",
                                "name": "emporium",
                                "price": 400,
                              },
                            ]
                          }
                          closeErrMsg={[Function]}
                          error={undefined}
                          handleChange={[Function]}
                          handleSubmit={[Function]}
                          loader={undefined}
                          state={
                            Object {
                              "Center": "testing",
                              "center": "",
                              "centerSet": 1,
                              "date": 0,
                              "guests": 0,
                              "selectedCenter": Array [],
                              "time": "12:00",
                              "title": "",
                              "type": "",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_context": Object {},
      "_currentElement": <Events
        centers={
          Array [
            Object {
              "description": "awesome place",
              "name": "emporium",
              "price": 400,
            },
            Object {
              "description": "awesome place",
              "name": "emporium",
              "price": 400,
            },
          ]
        }
        getCenters={[Function]}
        location={
          Object {
            "pathname": "hello",
          }
        }
        params={
          Object {
            "id": 1,
          }
        }
      />,
      "_instance": Events {
        "_reactInternalInstance": [Circular],
        "activeRoute": [Function],
        "closeErrMsg": [Function],
        "context": Object {},
        "handleChange": [Function],
        "handleSubmit": [Function],
        "props": Object {
          "centers": Array [
            Object {
              "description": "awesome place",
              "name": "emporium",
              "price": 400,
            },
            Object {
              "description": "awesome place",
              "name": "emporium",
              "price": 400,
            },
          ],
          "getCenters": [Function],
          "location": Object {
            "pathname": "hello",
          },
          "params": Object {
            "id": 1,
          },
        },
        "refs": Object {},
        "state": Object {
          "Center": "testing",
          "center": "",
          "centerSet": 1,
          "date": 0,
          "guests": 0,
          "selectedCenter": Array [],
          "time": "12:00",
          "title": "",
          "type": "",
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_nativeContainerInfo": null,
      "_nativeParent": null,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": Object {
        "_currentElement": <div
          className="Adds"
        >
          <nav
            className=""
            role="navigation"
            style={
              Object {
                "backgroundColor": "#212F3C",
              }
            }
          >
            <div
              className="nav-wrapper container"
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/"
              >
                <a
                  className="brand-logo white-text"
                  id="logo-container "
                >
                  Andela
                </a>
              </Link>
              <ul
                className="right hide-on-med-and-down"
              >
                <li>
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/user/events"
                  >
                    My Events
                  </Link>
                </li>
              </ul>
              <ul
                className="side-nav"
                id="nav-mobile"
              >
                <li>
                  <a
                    href="#"
                  />
                </li>
              </ul>
              <a
                className="button-collapse"
                data-activates="nav-mobile"
                href=""
              >
                <i
                  className="material-icons"
                >
                  menu
                </i>
              </a>
            </div>
          </nav>
          <div
            className="bgimg7"
            id=""
            style={Object {}}
          >
            <div
              className="row"
            >
              <div
                className="col s12 m12 l6 offset-l3"
              >
                <div
                  className=""
                  id="container"
                  style={
                    Object {
                      "paddingTop": 25,
                    }
                  }
                >
                  <div
                    className="row"
                  >
                    <div
                      className="card col s12"
                    >
                      <div
                        className="card-content white lighten-4"
                        style={
                          Object {
                            "color": "#212F3C",
                          }
                        }
                      >
                        <div
                          id="test4"
                          style={
                            Object {
                              "border": "2 solid lightgrey",
                            }
                          }
                        >
                          <div
                            className="row"
                          >
                            <Form
                              activeRoute={[Function]}
                              centerSet={1}
                              centers={
                                Array [
                                  Object {
                                    "description": "awesome place",
                                    "name": "emporium",
                                    "price": 400,
                                  },
                                  Object {
                                    "description": "awesome place",
                                    "name": "emporium",
                                    "price": 400,
                                  },
                                ]
                              }
                              closeErrMsg={[Function]}
                              error={undefined}
                              handleChange={[Function]}
                              handleSubmit={[Function]}
                              loader={undefined}
                              state={
                                Object {
                                  "Center": "testing",
                                  "center": "",
                                  "centerSet": 1,
                                  "date": 0,
                                  "guests": 0,
                                  "selectedCenter": Array [],
                                  "time": "12:00",
                                  "title": "",
                                  "type": "",
                                }
                              }
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>,
        "_renderedOutput": <div
          className="Adds"
        >
          <nav
            className=""
            role="navigation"
            style={
              Object {
                "backgroundColor": "#212F3C",
              }
            }
          >
            <div
              className="nav-wrapper container"
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/"
              >
                <a
                  className="brand-logo white-text"
                  id="logo-container "
                >
                  Andela
                </a>
              </Link>
              <ul
                className="right hide-on-med-and-down"
              >
                <li>
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/user/events"
                  >
                    My Events
                  </Link>
                </li>
              </ul>
              <ul
                className="side-nav"
                id="nav-mobile"
              >
                <li>
                  <a
                    href="#"
                  />
                </li>
              </ul>
              <a
                className="button-collapse"
                data-activates="nav-mobile"
                href=""
              >
                <i
                  className="material-icons"
                >
                  menu
                </i>
              </a>
            </div>
          </nav>
          <div
            className="bgimg7"
            id=""
            style={Object {}}
          >
            <div
              className="row"
            >
              <div
                className="col s12 m12 l6 offset-l3"
              >
                <div
                  className=""
                  id="container"
                  style={
                    Object {
                      "paddingTop": 25,
                    }
                  }
                >
                  <div
                    className="row"
                  >
                    <div
                      className="card col s12"
                    >
                      <div
                        className="card-content white lighten-4"
                        style={
                          Object {
                            "color": "#212F3C",
                          }
                        }
                      >
                        <div
                          id="test4"
                          style={
                            Object {
                              "border": "2 solid lightgrey",
                            }
                          }
                        >
                          <div
                            className="row"
                          >
                            <Form
                              activeRoute={[Function]}
                              centerSet={1}
                              centers={
                                Array [
                                  Object {
                                    "description": "awesome place",
                                    "name": "emporium",
                                    "price": 400,
                                  },
                                  Object {
                                    "description": "awesome place",
                                    "name": "emporium",
                                    "price": 400,
                                  },
                                ]
                              }
                              closeErrMsg={[Function]}
                              error={undefined}
                              handleChange={[Function]}
                              handleSubmit={[Function]}
                              loader={undefined}
                              state={
                                Object {
                                  "Center": "testing",
                                  "center": "",
                                  "centerSet": 1,
                                  "date": 0,
                                  "guests": 0,
                                  "selectedCenter": Array [],
                                  "time": "12:00",
                                  "title": "",
                                  "type": "",
                                }
                              }
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": null,
      "_topLevelWrapper": null,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Events
    centers={
      Array [
        Object {
          "description": "awesome place",
          "name": "emporium",
          "price": 400,
        },
        Object {
          "description": "awesome place",
          "name": "emporium",
          "price": 400,
        },
      ]
    }
    getCenters={[Function]}
    location={
      Object {
        "pathname": "hello",
      }
    }
    params={
      Object {
        "id": 1,
      }
    }
  />,
}
`;
